--- a/src/app/pages/restaurants/restaurants.page.html
+++ b/src/app/pages/restaurants/restaurants.page.html
@@ -17,8 +17,9 @@
         </ion-button>
     </div>
     <!-- Cuisine filter-->
-    <ion-searchbar [placeholder]="'Search by cuisine (french, italian...)'"
+    <ion-searchbar [placeholder]="'Filter by cuisine (french, italian...)'"
                    [(ngModel)]="cuisine"
+                   (keyup.enter)="getRestaurants()"
                    (ionClear)="clearSearch()">
     </ion-searchbar>
 </ion-list>
